[package]
name = "pastemyst"
version = "0.7.75"
authors = ["ANF-Studios <anforg@outlook.com>"]
edition = "2018"
license = "MIT"
license-file = "LICENSE"
keywords = ["pastemyst", "pastemyst-rs", "paste-myst-rs", "api wrapper"]
description = "An API wrapper for pastemyst written in Rust"
repository = "https://github.com/ANF/pastemyst-rs"
readme = "README.MD"

exclude = [
    "examples/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.0", features = [ "blocking", "json" ] }
tokio = { version = "1.0.1", features = ["macros"] }
serde = { version = "1.0.118", features = ["derive"] }
serde_json = { version = "1.0.61" }
